add button google & signin form

--- a/static/index.html
+++ b/static/index.html
@@ -29,19 +29,21 @@
                     <label for="password">Password</label>
                     <input type="password" name="password" id="password-input">
                 </div>
-                <div class="form-group">
-                    <label for="confirm-password">Confirm Password</label>
-                    <input type="password" name="confirm-password" id="confirm-password-input">
+                <p>or</p>
+                <div class="form-group">   
+                    <input type="button">
+                    <label for="btn" class="btn-google"> <img src="../src/img/google-logo-png-29546.png"><span class="txt-google">Continue with Google</span></label>
                 </div>
                 <div class="form-group">
-                    <input type="button" class="btn" value="Sign Up">
+                    <input type="button">
+                    <label for="btn" class="btn">Sign Up</label>
                 </div>
             </form>
             <div class="agreement">
-                <p>By clicking the <span>Sign Up</span> button, you agree to our <span>Terms & Condition</span> and <span>Privacy Policy</span>.</p>
+                <p>By clicking the <span class="blue">Sign Up</span> button, you agree to our <span class="blue">Terms & Condition</span> and <span class="blue">Privacy Policy</span>.</p>
             </div>
         </div>
-        <footer class="footer">
+        <footer class="footer white">
             <p>Already have an account?<a href="./signin.html"> Sign In</a></p>
         </footer>
     </div>
