--- a/static/signin.html
+++ b/static/signin.html
@@ -8,6 +8,32 @@
     <title>Sign In Form</title>
 </head>
 <body>
-    <a href="./index.html">REGISTER!</a>
+    <div class="container">
+        <div class="form-signin">
+            <h1>Sign In</h1>
+            <form>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email-input" placeholder="yourmail@example.com">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password-input">
+                </div>
+                <p>or</p>
+                <div class="form-group">   
+                    <input type="button">
+                    <label for="btn" class="btn-google"> <img src="../src/img/google-logo-png-29546.png"><span class="txt-google">Continue with Google</span></label>
+                </div>
+                <div class="form-group">
+                    <input type="button">
+                    <label for="btn" class="btn">Sign In</label>
+                </div>
+            </form>
+            <footer class="footer-black">
+                <p>Don't have an account?<a href="./index.html"> Register</a></p>
+            </footer>
+        </div>
+    </div>
 </body>
 </html>
