--- a/static/signin.html
+++ b/static/signin.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="form-signin">
-            <h1>Sign In</h1>
+            <h1>Login</h1>
             <form>
                 <div class="form-group">
                     <label for="email">Email</label>
@@ -27,7 +27,7 @@
                 </div>
                 <div class="form-group">
                     <input type="button">
-                    <label for="btn" class="btn">Sign In</label>
+                    <label for="btn" class="btn">Login</label>
                 </div>
             </form>
             <footer class="footer-black">
