--- a/static/index.html
+++ b/static/index.html
@@ -29,10 +29,14 @@
                     <label for="password">Password</label>
                     <input type="password" name="password" id="password-input">
                 </div>
+                <div class="form-group">
+                    <label for="password">Confirm Password</label>
+                    <input type="password" name="password" id="confirm-password-input">
+                </div>
                 <p>or</p>
                 <div class="form-group">   
                     <input type="button">
-                    <label for="btn" class="btn-google"> <img src="../src/img/google-logo-png-29546.png"><span class="txt-google">Continue with Google</span></label>
+                    <label for="btn" class="btn-google"> <img src="../src/img/google-logo-png-29546.png"><span class="txt-google">Register with Google</span></label>
                 </div>
                 <div class="form-group">
                     <input type="button">
